[package]
name = "rip_intruder"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.66"
itertools = "0.10.5"
futures = "0.3"
indicatif = "0.17.1"
clap = { version = "4.0.18", features = ["derive"] }
regex = "1"